--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -12,6 +12,5 @@
         }
     },
     "postCreateCommand": "pipx install algokit",
-    "postStartCommand": "pip install algokit",
-    "postStartCommand": "algokit localnet start"
+    "postStartCommand": "pip install algokit && algokit localnet start"
 }
